# hyperliquid-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.json  claude_desktop_config_trading.json  usage.md
src/hyperliquid_mcp/: __init__.py  __main__.py  client.py  server.py
src/hyperliquid_mcp/tools/: __init__.py  account.py  funding.py  market.py  trading.py
tests/: integration_test.py  test_tools.py
